# anvilock

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  build.sh  client_state.h  config.h  egl.h  freetype.h  log.h  main.c  meson.build  muvilock  pam.h  session_lock_handle.h  shaders.h  shared_mem_handle.h  stb_image.h  stb_image_write.h  surface_colors.h  unicode.h  wl_keyboard_handle.h  wl_output_handle.h  wl_pointer_handle.h  wl_registry_handle.h  wl_seat_handle.h  xdg_surface_handle.h  xdg_wm_base_handle.h
.dev/: CHANGELOG.sh
.github/workflows/: build-fedora.sh  build-ubuntu.sh  build.yml  codeql-analysis.yml  codeql-fedora.yml  codeql-ubuntu.yml  format-check-anvilock.yml  release-build.yml
CHANGELOG/: v0.0.1-alpha.md  v0.0.2-alpha.md  v0.0.3-alpha.md  v0.0.4-alpha.md  v0.0.5-alpha.md  v0.0.6-alpha.md  v0.0.7-alpha.md  v0.0.8-alpha.md  v0.0.9-alpha.md  v0.1.0-alpha.md  v0.1.1-alpha.md  v0.1.2-alpha.md  v0.1.3-alpha.md  v0.1.4-alpha.md  v0.1.5-alpha.md  v0.1.7-alpha.md  vv0.1.8-alpha.md
anvilock/: ClientState.hpp  GlobalFuncs.hpp  Log.hpp  LogMacros.hpp  Types.hpp
anvilock/config/: ConfigHandler.hpp  ConfigStruct.hpp
anvilock/freetype/: FreeTypeHandler.hpp  FreeTypeStruct.hpp
anvilock/pam/: PamAuthenticator.hpp
anvilock/pwdbuf/: PasswordBuffer.hpp
anvilock/renderer/: EGL.hpp  GLUtils.hpp
anvilock/runtime/: EGLExceptionHandler.hpp  LogUtils.hpp
anvilock/shaders/: ShaderHandler.hpp
anvilock/shm/: SharedMemoryHandler.hpp
anvilock/term/: AnsiSchema.hpp  OutputStream.hpp
anvilock/toml/: Parser.hpp
anvilock/utils/: Assert.hpp  STBImpl.hpp
anvilock/wayland/: OutputHandler.hpp  RegistryHandler.hpp
anvilock/wayland/buffer/: BufferHandler.hpp
anvilock/wayland/seats/: KeyboardHandler.hpp  PointerHandler.hpp  SeatHandler.hpp
anvilock/wayland/session-lock/: SessionLockHandler.hpp
anvilock/wayland/xdg/: SurfaceHandler.hpp  WmBaseHandler.hpp
anvilock/widgets/: BackgroundTexture.hpp  PasswordField.hpp  TimeBox.hpp  WidgetInterface.hpp  WidgetRegistryHelper.hpp  WidgetRegistryMacros.hpp
anvilock/widgets/helpers/: WidgetHelper.hpp
assets/.config/anvilock/: config.toml
assets/examples/: config.toml
cmake/: CheckHeaders.cmake
examples/toml/: CMakeLists.txt  example.toml  main.cpp
include/: ClientState.hpp  GlobalFuncs.hpp  Log.cpp  Log.hpp  LogMacros.hpp  NOTE.md  Types.hpp  WaylandSmartPtrs.hpp  client_state.h  global_funcs.h  log.h
include/config/: ConfigHandler.hpp  ConfigStruct.hpp  config.h
include/deprecated/: NOTE.md  unicode.h
include/freetype/: FreeTypeHandler.hpp  FreeTypeStruct.hpp  FreeTypeWrapper.hpp  freetype.h
include/graphics/: egl.h  shaders.h
include/memory/: MemoryHandler.hpp  MemoryImpl.hpp  anvil_mem.h
include/pam/: PamAuthenticator.hpp  PasswordBuffer.hpp  pam.h  pam.hpp  password_buffer.h
include/pwdbuf/: PasswordBuffer.hpp
include/renderer/: EGL.hpp  GLUtils.hpp
include/runtime/: EGLExceptionHandler.hpp  LogLevel.hpp  LogUtils.hpp
include/shaders/: ShaderHandler.hpp
include/shm/: SharedMemoryHandler.hpp
include/term/: AnsiSchema.hpp  OutputStream.cpp  OutputStream.hpp
include/toml/: Parser.hpp
include/utils/: STBImpl.hpp
include/wayland/: OutputHandler.cpp  OutputHandler.hpp  RegistryHandler.hpp  session_lock_handle.h  wl_buffer_handle.h  wl_keyboard_handle.h  wl_output_handle.h  wl_pointer_handle.h  wl_registry_handle.h  wl_seat_handle.h  xdg_surface_handle.h  xdg_wm_base_handle.h
include/wayland/buffer/: BufferHandler.hpp
include/wayland/seats/: KeyboardHandler.hpp  PointerHandler.cpp  PointerHandler.hpp  SeatHandler.hpp
include/wayland/session-lock/: SessionLockHander.hpp  SessionLockHandler.hpp
include/wayland/xdg/: SurfaceHandler.cpp  SurfaceHandler.hpp  WmBaseHandler.cpp  WmBaseHandler.hpp
include/widgets/: BackgroundTexture.hpp  PasswordField.hpp  TimeBox.hpp  WidgetInterface.hpp  WidgetRegistryHelper.hpp  WidgetRegistryMacros.hpp
include/widgets/helpers/: WidgetHelper.hpp
protocols/: PROTOCOLS.md  xdg-shell-client-protocol.h
shaders/egl/fadeout/: fragment_shader.glsl  vertex_shader.glsl
shaders/egl/init/: fragment_shader.glsl  vertex_shader.glsl
shaders/egl/render_password_field/: fragment_shader.glsl  vertex_shader.glsl
shaders/egl/render_time_box/: fragment_shader.glsl  vertex_shader.glsl
shaders/egl/texture/: fragment_shader.glsl
src/: Anvilock.hpp  main.c  main.cpp  main.h
src/config/: ConfigHandler.cpp
src/global/: ClientState.cpp
src/logger/: Log.cpp
src/pam/: PamAuthenticator.cpp
src/renderer/: EGL.cpp
src/shaders/: ShaderManager.cpp
src/toml/: Parser.cpp
src/wayland/: OutputHandler.cpp  RegistryHandler.cpp
src/wayland/seats/: KeyboardHandler.cpp  PointerHandler.cpp  SeatHandler.cpp
src/wayland/session-lock/: SessionLockHandler.cpp
src/wayland/xdg/: SurfaceHandler.cpp  WmBaseHandler.cpp
src/widgets/: BackgroundTexture.cpp  PasswordField.cpp  TimeBox.cpp  WidgetInterface.cpp
src/widgets/helpers/: WidgetHelper.cpp
